# torched-isosplit6

./: .gitignore  pyproject.toml
isosplit6_torch/: __init__.py  _isocut6.py  _isosplit6.py  _jisotonic5.py  _parcelate.py  _pca.py  clustering.py
isosplit6_torch/tests/: test_isosplit6.py
